test_inputs/bad/unexpected_token.lat
while (0) {
    printInt(12);
}
